# module-json

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-json-module.spec
docs/: Doxyfile.in  doxyfile.tmpl  doxygen-api-filter.q  mainpage.doxygen.tmpl
docs/qlib/: Doxyfile.tmpl
examples/: JsonRpcHandler.qc  JsonRpcServerValidation.q  json-rpc-client.q
qlib/: JsonRpcConnection.qm  JsonRpcHandler.qm
src/: Makefile.am  QC_JsonRpcClient.cpp  QC_JsonRpcClient.h  QC_JsonRpcClient.qpp  json-module.cpp  ql_json.cpp  ql_json.h  ql_json.qpp  qore-json-module.h  single-compilation-unit.cpp
test/: JsonRpcClient.qtest  JsonRpcHandler.qtest  json-test.q  json.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
